[package]
name = "sage-client"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chia = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
tokio = { workspace = true, features = ["full"] }
tungstenite = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
native-tls = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
