[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", default-features = false }

[dependencies]
tauri = { version = "2.0.0-rc.8" }
tauri-plugin-nfc-debug = { path = "../../../" }

